Argo config modified

--- a/argo-setup/argoapp.yaml
+++ b/argo-setup/argoapp.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: spring-app
+  name: my-jojo
   namespace: argocd
 spec:
   project: spring-app-demo
