--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -40,8 +40,13 @@ spec:
         - name: config-volume
           mountPath: /etc/config
           readOnly: true
+        - name: secret-volume
+          mountPath: /etc/secrets
+          readOnly: true
       volumes:
       - name: config-volume
         configMap:
           name: {{ .Values.configmap.name }}
-
+      - name: secret-volume
+        secret:
+          secretName: {{ .Values.secrets.name }}
